@@ -1,3 +1,9 @@
+2015-02-21  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* dvi.c: Read glyph advances without the need for FreeType, based on
+	patch by Clerk Ma.
+	* fontmap.c, fontmap.h: Stop loading FreeType fonts.
+
 2015-02-16  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* jpegimage.c: Fix jpeg_get_density().
